navbar collapse fix

--- a/src/assets/css/my-style.css
+++ b/src/assets/css/my-style.css
@@ -76,6 +76,7 @@ html {
 }
 
 #jumbotron {
+  position: relative;
   height: 100vh;
   width: 100vw;
   z-index: 1;
@@ -266,10 +267,10 @@ html {
 
 footer {
   background-image: linear-gradient(#327a6d, #44a694);
-  /* z-index: 999;
-  position: relative;
-  top: 0;
-  bottom: 0;
+  z-index: 9999;
+  /* position: relative;
+  bottom: 0; */
+  /* top: 0;
   right: 0;
   left: 0; */
 }
